# close-to-zero-prompting-ai-brain

./: .agent_approvals.json  .gitignore  AI_BRAIN_CAPABILITY_ASSESSMENT.md  ARCHITECTURE_DEEP_DIVE.md  AUTONOMOUS_BUILDING_ANALYSIS.md  AUTONOMOUS_BUILDING_TEST.md  AUTONOMOUS_ENGINEER_COMPLETED.md  AUTONOMOUS_ENGINEER_PLAN.md  AUTONOMOUS_ENGINEER_README.md  AUTONOMOUS_PR_REVIEW_SETUP.md  CODEBASE_ANALYSIS.md  COMPLEX_SYSTEM_WORKFLOW.md  COMPREHENSIVE_SAFETY_AUDIT.md  EKS_POD_CRASH_EXAMPLE.md  EXAMPLES.md  FIXES_APPLIED.md  FULL_AUTONOMY_CAPABILITIES.md  FULL_AUTONOMY_GUIDE.md  GOVERNANCE_INTEGRATION.md  GOVERNANCE_PATTERNS.md  LEARNINGS.md  LIGHTWEIGHT_TEST_PROMPTS.md  MANIFEST.in  MODEL_CONFIG.md  PACKAGE_README.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE4_TEST_EXAMPLES.md  PHASE_2_ROADMAP.md  QUERY_CAPABILITIES.md  QUICK_FIX_NOTES.md  QUICK_START.md  QUICK_TEST.sh  QUICK_TEST_LIGHTWEIGHT.sh  README.md  REFACTORING_COMPLETE.md  REORGANIZATION_COMPLETE.md  SAFETY_AUDIT_REPORT.md  (+55 more)
autonomous_engineer/: __init__.py  architect_agent.py  backend_agent.py  deploy_agent.py  fix_agent.py  frontend_agent.py  orchestrator_agent.py  test_agent.py
mcp_servers/: README.md  __init__.py  docker_tools.py  github_tools.py  homeassistant_tools.py  web_search_tools.py
scripts/: add_secret.sh
sub_agents/: __init__.py  autonomous_builder_agent.py  base_agent.py  base_agent_advanced.py.backup  base_agent_simple.py  config_agent.py  consulting_agent.py  docker_agent.py  pr_review_agent.py
