[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-brain"
version = "0.1.0"
description = "Close-to-Zero Prompting AI Brain - Autonomous agent framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Youcef Djeddar", email = "your.email@example.com"}
]
keywords = ["ai", "agents", "automation", "autonomous", "langchain", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "langchain-ollama>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
github = [
    "PyGithub>=2.0.0",
]
anthropic = [
    "langchain-anthropic>=0.1.0",
]
all = [
    "PyGithub>=2.0.0",
    "langchain-anthropic>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/youcefjd/close-to-zero-prompting-ai-brain"
Documentation = "https://github.com/youcefjd/close-to-zero-prompting-ai-brain#readme"
Repository = "https://github.com/youcefjd/close-to-zero-prompting-ai-brain"
Issues = "https://github.com/youcefjd/close-to-zero-prompting-ai-brain/issues"

[project.scripts]
ai-brain = "autonomous_orchestrator:main"
ai-brain-approve = "approve:main"

[tool.setuptools]
packages = ["sub_agents", "mcp_servers"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
